@@ -21,8 +21,20 @@ Doc: numerical derivation of \var{expr} with respect to $X$ at $X=a$. The
  ? f'(0) - cos(1)
  %2 = 0.E-38
  @eprog
- When $a$ is a power series, compute \kbd{derivnum(t=a,f)} as $f'(a) =
- (f(a))'/a'$.
+
+ \item When $a$ is a numerical type (integer, rational number, real number or
+ \typ{COMPLEX} of such), performs numerical derivation.
+
+ \item When $a$ is a (polynomial, rational function or) power series, compute
+ \kbd{derivnum(t=a,f)} as $f'(a) = (f(a))'/a'$:
+ \bprog
+ ? derivnum(x = 1 + t, sqrt(x))
+ %1 = 1/2 - 1/4*t + 3/16*t^2 - 5/32*t^3 + ... + O(t^16)
+ ? derivnum(x = 1/(1 + t), sqrt(x))
+ %2 = 1/2 + 1/4*t - 1/16*t^2 + 1/32*t^3 + ... + O(t^16)
+ ? derivnum(x = 1 + t + O(t^17), sqrt(x))
+ %3 = 1/2 - 1/4*t + 3/16*t^2 - 5/32*t^3 + ... + O(t^16)
+ @eprog
 
  If the parameter \var{ind} is present, it can be
 
@@ -39,9 +51,14 @@ Doc: numerical derivation of \var{expr} with respect to $X$ at $X=a$. The
  %2 = [1, 1, 1, 0, -3, -8, -3, 56, 217, 64, -2951, -12672, 5973, 309376]
  @eprog
 
- \synt{derivfunk}{void *E, GEN (*eval)(void*,GEN), GEN a, GEN ind long prec}.
+ \synt{derivfunk}{void *E, GEN (*eval)(void*,GEN), GEN a, GEN ind, long prec}.
  Also available is
- \fun{GEN}{derivfun}{void *E, GEN (*eval)(void *, GEN), GEN a, long prec}
+ \fun{GEN}{derivfun}{void *E, GEN (*eval)(void *, GEN), GEN a, long prec}.
+ If $a$ is a numerical type (\typ{INT}, \typ{FRAC}, \typ{REAL} or
+ \typ{COMPLEX} of such, we have
+ \fun{GEN}{derivnumk}{void *E, GEN (*eval)(void *, GEN, long), GEN a, GEN ind, long prec}
+ and
+ \fun{GEN}{derivnum}{void *E, GEN (*eval)(void *, GEN, long prec), GEN a, long prec}
 
 Function: _derivfun
 Section: programming/internals
