@@ -10,6 +10,18 @@
   *** _derivfun: incorrect type in formal derivation (t_STR).
 -0.65364362086361191463916818309775038142
 1 + O(t^2)
+1 - 1/2*t^2 + 1/24*t^4 - 1/720*t^6 + 1/40320*t^8 - 1/3628800*t^10 + 1/479001
+600*t^12 - 1/87178291200*t^14 + 1/20922789888000*t^16 + O(t^17)
+0.54030230586813971740093660744297660373 + 0.8414709848078965066525023216302
+9899962*t - 1.1116221377419663653529706253517873015*t^2 + 1.2415281265413868
+062780218754682257701*t^3 - 1.2086763551283186745359503800028237137*t^4 + 0.
+99756648563165528612382129965904293175*t^5 - 0.60046085825628373309052750421
+982407285*t^6 + 0.017967952623614463202494741978235548201*t^7 + 0.7405545097
+7142910348016232166472688835*t^8 - 1.6567879034733145514106563113137871197*t
+^9 + 2.7034410910737658601008510753655794704*t^10 - 3.8444448874661633307934
+331097517525115*t^11 + 5.0353559133209458942259649372731155819*t^12 - 6.2239
+703711772098957775971680803734805*t^13 + 7.351145435617212277584406723929509
+9581*t^14 - 8.3518230734703734024304578550750879237*t^15 + O(t^16)
 3.5962749997291581980860017516463603814
 0
 Mod(x, x^2 + 1)
@@ -61,6 +73,9 @@ O(x)
 x
 x
 -2.0000000000000000000000000000000000000
+-2 + 12*t^2 - 30*t^4 + 56*t^6 - 90*t^8 + 132*t^10 - 182*t^12 + 240*t^14 - 30
+6*t^16 + O(t^18)
+6*t^4 - 20*t^6 + 42*t^8 - 72*t^10 + 110*t^12 - 156*t^14 + 210*t^16 + O(t^18)
 -52635599.000000000000000000000000000000
 [1, 1, 1, 0, -3, -8, -3, 56, 217, 64, -2951, -12672, 5973, 309376]
 1 + x^2 + 1/2*x^4 + 1/6*x^6 + 1/24*x^8 + 1/120*x^10 + 1/720*x^12 + 1/5040*x^
@@ -72,4 +87,4 @@ x
   ***   at top-level: derivnum(z=0,0,[1,-1])
   ***                              ^---------
   ***   domain error in derivnumk: derivation order < 0
-Total time spent: 6
+Total time spent: 4
