@@ -5,6 +5,8 @@ sin'(x)
 sin'("")
 derivnum(x=4,sin(x))
 derivnum(x=t^2+O(t^4),sin(x))
+derivnum(x=t,sin(x))
+derivnum(x=1/(1+t),sin(x))
 derivnum(x=1,Pi^x)
 v=[Mod(x*y+1,x^2+1), Mod(1,3), ffgen(2^3,'t), 1+x*y+O(x^3), x/(x+y), (x^3/3+x+1) / (x^2+1)^2, [x*y], Mat(x*y)];
 {
@@ -28,6 +30,8 @@ variable(a)
 variable(b)
 
 derivnum(x=0,1/(x^2+1),2)
+derivnum(x=t,1/(x^2+1),2)
+derivnum(x=1/t,1/(x^2+1),2)
 derivnum(x=0,exp(sin(x)),16)
 round( derivnum(x=0,exp(sin(x)),[0..13]) )
 derivnum(t=x^2,exp(t),4)
